[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Test/TestGuessMeaning.gd" type="Script" id=2]
[ext_resource path="res://Test/test_bg.png" type="Texture" id=3]
[ext_resource path="res://Test/TestAnswer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Test/SentenceCarousel.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Explanation" type="Label" parent="."]
anchor_right = 1.0
margin_top = 18.2215
margin_bottom = 32.2215
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.309804, 0.309804, 0.309804, 1 )
text = "Guess the word's meaning"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thai" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -55.0931
margin_right = 77.0
margin_bottom = -12.0931
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ฟ้า"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_1" parent="." instance=ExtResource( 4 )]
position = Vector2( 85.4182, 122.14 )

[node name="answer_2" parent="." instance=ExtResource( 4 )]
position = Vector2( 201.746, 92.8401 )

[node name="answer_3" parent="." instance=ExtResource( 4 )]
position = Vector2( 112.236, 92.8401 )

[node name="answer_4" parent="." instance=ExtResource( 4 )]
position = Vector2( 153.761, 134.977 )

[node name="answer_5" parent="." instance=ExtResource( 4 )]
position = Vector2( 35.3733, 100.977 )

[node name="answer_6" parent="." instance=ExtResource( 4 )]
position = Vector2( 218.874, 131.401 )

[node name="answer_7" parent="." instance=ExtResource( 4 )]
position = Vector2( 173.752, 114.401 )

[node name="SentenceCarousel" parent="." instance=ExtResource( 5 )]
